--- a/sentences/0001.md
+++ b/sentences/0001.md
@@ -1,66 +1,80 @@
 # 句子
 
-- 永不言弃。
-- never give up.
+1. 永不言弃。
+    - <span class="switch">switch</span> <span class="en">never give up.</span>
 
-- 你对我有意思吗?
-- are you `hit`ting on me?
+2. 你对我有意思吗?
+    - <span class="switch">switch</span> <span class="en">are you `hit`ting on me?</span>
 
-- 读书可以丰富你的头脑（思想）。
-- reading can `enrich` your minds.
+3. 读书可以丰富你的头脑（思想）。
+    - <span class="switch">switch</span> <span class="en">reading can `enrich` your minds.</span>
 
-- 植物从土壤中吸收水分.
-- plants `absorb` water from the `soil`.
+4. 植物从土壤中吸收水分.
+    - <span class="switch">switch</span> <span class="en">plants `absorb` water from the `soil`.</span>
 
-- 公共场所静止吸烟!
-- smoking is `ban`ned in **public palces**.
+5. 公共场所静止吸烟!
+    - <span class="switch">switch</span> <span class="en">smoking is `ban`ned in **public palces**.</span>
 
-- 那个政客是个骗子！别相信他！
-- that `politician` is a `liar`! Don't believe him!
+6. 那个政客是个骗子！别相信他！
+    - <span class="switch">switch</span> <span class="en">that `politician` is a `liar`! Don't believe him!</span>
 
-- 人们正在体育馆里进行着紧张的训练。
-- Pepole are **having an intense traning ** in the `gym`.
+7. 人们正在体育馆里进行着紧张的训练。
+    - <span class="switch">switch</span> <span class="en">Pepole are **having an intense traning ** in the `gym`.</span>
 
-- 他正指挥着一只交响乐团。
-- He is `conduct`ing an `orchestra`.
+8. 他正指挥着一只交响乐团。
+    - <span class="switch">switch</span> <span class="en">He is `conduct`ing an `orchestra`.</span>
 
-- 男孩在咀嚼米饭。
-- The boy is `chew`ing the `rice`.
+9. 男孩在咀嚼米饭。
+    - <span class="switch">switch</span> <span class="en">The boy is `chew`ing the `rice`.</span>
 
-- 医生正仔细治疗小女孩腿上的伤。
-- The docotor is `carefully` `treat`ing the `wound` on the little girl's `leg`.
+10. 医生正仔细治疗小女孩腿上的伤。
+    - <span class="switch">switch</span> <span class="en">The docotor is `carefully` `treat`ing the `wound` on the little girl's `leg`.</span>
 
-- 他代表他的国家参加了这次会议。
-- He `attend`ed the `conference` **on behalf of** his country.
-- He `participate`d in this meeting on `behalf` of his country.
+11. 他代表他的国家参加了这次会议。
+    - <span class="switch">switch</span> <span class="en">He `attend`ed the `conference` **on behalf of** his country.</span>
+    - <span class="switch">switch</span> <span class="en">He `participate`d in this meeting on `behalf` of his country.</span>
 
-- 没有啥能动摇他的决心————成为能流利讲英语的人！
-- Nothing `shake`s his `resolve` of being a `fluent` English speaker!
+12. 没有啥能动摇他的决心————成为能流利讲英语的人！
+    - <span class="switch">switch</span> <span class="en">Nothing `shake`s his `resolve` of being a `fluent` English speaker!</span>
 
-- 自动化生产线大大地提高了生产效率。
-- The `automatic` production line `improve`s the working `efficiency` `greatly`.
+13. 自动化生产线大大地提高了生产效率。
+    - <span class="switch">switch</span> <span class="en">The `automatic` production line `improve`s the working `efficiency` `greatly`.</span>
 
-- 他们把一个人从人群里分离出来了。
-- They `separate`d a person from the `crowd`.
+14. 他们把一个人从人群里分离出来了。
+    - <span class="switch">switch</span> <span class="en">They `separate`d a person from the `crowd`.</span>
 
-- 那两个孪生兄弟的性格相差很远。
-- The twin brothers are far `apart` in character.
+15. 那两个孪生兄弟的性格相差很远。
+    - <span class="switch">switch</span> <span class="en">The twin brothers are far `apart` in character.</span>
 
-- 工人把箱子转移到另一个地方。
-- The worker `transfer`red the box to another place.
+16. 工人把箱子转移到另一个地方。
+    - <span class="switch">switch</span> <span class="en">The worker `transfer`red the box to another place.</span>
 
-- 世界上有成千上万种各不相同的鸟。
-- There are `tens of thousands of` different `species` of birds.
-- There are `thousands of` species of birds in the world.
+17. 世界上有成千上万种各不相同的鸟。
+    - <span class="switch">switch</span> <span class="en">There are `tens of thousands of` different `species` of birds.</span>
+    - <span class="switch">switch</span> <span class="en">There are `thousands of` species of birds in the world.</span>
 
-- 尽管风很大，这个记者仍然在户外工作。
-- `despite` the `windy` day, the `reporter` still worked `outdoors`.
+18. 尽管风很大，这个记者仍然在户外工作。
+    - <span class="switch">switch</span> <span class="en">`despite` the `windy` day, the `reporter` still worked `outdoors`.</span>
 
-- 制作蛋糕需要在烘培前混合牛奶、鸡蛋、面粉和糖。
-- Making a `cake` `involve`s mixing milk, eggs, `flour` and sugar before `baking`.
+19. 制作蛋糕需要在烘培前混合牛奶、鸡蛋、面粉和糖。
+    - <span class="switch">switch</span> <span class="en">Making a `cake` `involve`s mixing milk, eggs, `flour` and sugar before `baking`.</span>
 
-- 我的地产包括我的房子和这片森林的一部分。
-- my `estate` includes my house and part of the `forest`.
+20. 我的地产包括我的房子和这片森林的一部分。
+    - <span class="switch">switch</span> <span class="en">my `estate` includes my house and part of the `forest`.</span>
 
-- 占用公交车道是违法行为！
-- `occupy`ing a bus `lane` is `illegal`.
+21. 占用公交车道是违法行为！
+    -<span class="switch">switch</span> <span class="en"> `occupy`ing a bus `lane` is `illegal`.</span>
+
+<script>
+$('span.switch').on( 'click', function() {
+    var that = $(this).next('span');
+    if ( that.is(":visible") ) {
+        that.hide();
+    } else {
+        that.show();
+    }
+} );
+$('span.en').each( function(i, e) {
+   $(this).hide();
+} );
+</script>
