--- a/sentences/0001-日常用语.md
+++ b/sentences/0001-日常用语.md
@@ -1,5 +1,18 @@
-1. 
-    - <span class="switch">switch</span> <span class="en">.</span>
+
+- A: 你好,迈克
+    - <span class="switch">&otimes;</span> <span class="en">Hi. Mike</span>
+
+- B: 你好皮特！最近怎么样？
+    - <span class="switch">&otimes;</span> <span class="en">Hi Peter! How are you?</span>
+
+- A: 挺好的，谢谢。您呢?
+    - <span class="switch">&otimes;</span> <span class="en">Fine,thanks. and you?</span>
+
+- B: 很好，谢谢
+    - <span class="switch">&otimes;</span> <span class="en">Very well, thanks.</span>
+
+- 你好,迈克，你好皮特！最近怎么样？
+    - <span class="switch">&otimes;</span> <span class="en">Hi. Mike, Hi Peter! How are you?</span>
 
 <script>
 $('span.switch').on( 'click', function() {
